cmake_minimum_required(VERSION 3.20)
project(LeetCode)

set(CMAKE_CXX_STANDARD 23)

add_executable(
        LeetCode
        "main.cpp"
        "ListNode.h"
        "TreeNode.h"
        ".leetcode/1. Two Sum.h"
        ".leetcode/2. Add Two Numbers.h"
        ".leetcode/3. Longest Substring Without Repeating Characters.h"
        ".leetcode/4. Median of Two Sorted Arrays.h"
        ".leetcode/5. Longest Palindromic Substring.h"
        ".leetcode/6. ZigZag Conversion.h"
        ".leetcode/7. Reverse Integer.h"
        ".leetcode/8. String to Integer (atoi).h"
        ".leetcode/9. Palindrome Number.h"
        ".leetcode/10. Regular Expression Matching.h"
        ".leetcode/11. Container With Most Water.h"
        ".leetcode/12. Integer to Roman.h"
        ".leetcode/13. Roman to Integer.h"
        ".leetcode/14. Longest Common Prefix.h"
        ".leetcode/15. 3Sum.h"
        ".leetcode/16. 3Sum Closest.h"
        ".leetcode/17. Letter Combinations of a Phone Number.h"
        ".leetcode/18. 4Sum.h"
        ".leetcode/19. Remove Nth Node From End of List.h"
        ".leetcode/20. Valid Parentheses.h"
        ".leetcode/21. Merge Two Sorted Lists.h"
        ".leetcode/22. Generate Parentheses.h"
        ".leetcode/23. Merge k Sorted Lists.h"
        ".leetcode/24. Swap Nodes in Pairs.h"
        ".leetcode/25. Reverse Nodes in k-Group.h"
        ".leetcode/26. Remove Duplicates from Sorted Array.h"
        ".leetcode/27. Remove Element.h"
        ".leetcode/28. Implement strStr().h"
        ".leetcode/29. Divide Two Integers.h"
        ".leetcode/30. Substring with Concatenation of All Words.h"
        ".leetcode/31. Next Permutation.h"
        ".leetcode/32. Longest Valid Parentheses.h"
        ".leetcode/33. Search in Rotated Sorted Array.h"
        ".leetcode/34. Find First and Last Position of Element in Sorted Array.h"
        ".leetcode/35. Search Insert Position.h"
        ".leetcode/36. Valid Sudoku.h"
        ".leetcode/37. Sudoku Solver.h"
        ".leetcode/38. Count and Say.h"
        ".leetcode/39. Combination Sum.h"
        ".leetcode/40. Combination Sum II.h"
        ".leetcode/41. First Missing Positive.h"
        ".leetcode/42. Trapping Rain Water.h"
        ".leetcode/43. Multiply Strings.h"
        ".leetcode/44. Wildcard Matching.h"
        ".leetcode/45. Jump Game II.h"
        ".leetcode/46. Permutations.h"
        ".leetcode/47. Permutations II.h"
        ".leetcode/48. Rotate Image.h"
        ".leetcode/49. Group Anagrams.h"
        ".leetcode/50. Pow(x, n).h"
        ".leetcode/51. N-Queens.h"
        ".leetcode/52. N-Queens II.h"
        ".leetcode/53. Maximum Subarray.h"
        ".leetcode/54. Spiral Matrix.h"
        ".leetcode/55. Jump Game.h"
        ".leetcode/56. Merge Intervals.h"
        ".leetcode/57. Insert Interval.h"
        ".leetcode/58. Length of Last Word.h"
        ".leetcode/59. Spiral Matrix II.h"
        ".leetcode/60. Permutation Sequence.h"
        ".leetcode/61. Rotate List.h"
        ".leetcode/62. Unique Paths.h"
        ".leetcode/63. Unique Paths II.h"
        ".leetcode/64. Minimum Path Sum.h"
        ".leetcode/65. Valid Number.h"
        ".leetcode/66. Plus One.h"
        ".leetcode/67. Add Binary.h"
        ".leetcode/68. Text Justification.h"
        ".leetcode/69. Sqrt(x).h"
        ".leetcode/70. Climbing Stairs.h"
        ".leetcode/71. Simplify Path.h"
        ".leetcode/72. Edit Distance.h"
        ".leetcode/73. Set Matrix Zeroes.h"
        ".leetcode/74. Search a 2D Matrix.h"
        ".leetcode/75. Sort Colors.h"
        ".leetcode/76. Minimum Window Substring.h"
        ".leetcode/77. Combinations.h"
        ".leetcode/78. Subsets.h"
        ".leetcode/79. Word Search.h"
        ".leetcode/80. Remove Duplicates from Sorted Array II.h"
        ".leetcode/81. Search in Rotated Sorted Array II.h"
        ".leetcode/82. Remove Duplicates from Sorted List II.h"
        ".leetcode/83. Remove Duplicates from Sorted List.h"
        ".leetcode/84. Largest Rectangle in Histogram.h"
        ".leetcode/85. Maximal Rectangle.h"
        ".leetcode/86. Partition List.h"
        ".leetcode/88. Merge Sorted Array.h"
        ".leetcode/89. Gray Code.h"
        ".leetcode/90. Subsets II.h"
        ".leetcode/91. Decode Ways.h"
        ".leetcode/94. Binary Tree Inorder Traversal.h"
        ".leetcode/96. Unique Binary Search Trees.h"
        ".leetcode/98. Validate Binary Search Tree.h"
        ".leetcode/101. Symmetric Tree.h"
        ".leetcode/102. Binary Tree Level Order Traversal.h"
        ".leetcode/104. Maximum Depth of Binary Tree.h"
        ".leetcode/105. Construct Binary Tree from Preorder and Inorder Traversal.h"
        ".leetcode/114. Flatten Binary Tree to Linked List.h"
        ".leetcode/121. Best Time to Buy and Sell Stock.h"
        ".leetcode/124. Binary Tree Maximum Path Sum.h"
        ".leetcode/218. The Skyline Problem.h"
        ".leetcode/704. Binary Search.h"
        ".leetcode/705. Design HashSet.h"
        ".leetcode/706. Design HashMap.h"
        ".leetcode/994. Rotting Oranges.h" ".leetcode/136. Single Number.h" ".leetcode/141. Linked List Cycle.h" ".leetcode/155. Min Stack.h" ".leetcode/160. Intersection of Two Linked Lists.h" ".leetcode/169. Majority Element.h" ".leetcode/206. Reverse Linked List.h" ".leetcode/226. Invert Binary Tree.h" ".leetcode/234. Palindrome Linked List.h" ".leetcode/283. Move Zeroes.h" ".leetcode/448. Find All Numbers Disappeared in an Array.h" ".leetcode/543. Diameter of Binary Tree.h" ".leetcode/617. Merge Two Binary Trees.h" ".leetcode/108. Convert Sorted Array to Binary Search Tree.h" ".leetcode/118. Pascal's Triangle.h" ".leetcode/125. Valid Palindrome.h" ".leetcode/171. Excel Sheet Column Number.h" ".leetcode/190. Reverse Bits.h" ".leetcode/191. Number of 1 Bits.h" ".leetcode/202. Happy Number.h" ".leetcode/217. Contains Duplicate.h" ".leetcode/237. Delete Node in a Linked List.h" ".leetcode/242. Valid Anagram.h")
